fix spacing

--- a/src/about_me/styling/timeline.scss
+++ b/src/about_me/styling/timeline.scss
@@ -104,16 +104,16 @@ $timeline-bar-colour: rgb(0, 204, 255);
   
   .about-event {
     width: 100%;
-    margin: 10em 1.5em;
+    margin: 7em 1.5em 0em;
 
-    .event-title {
+    .event-title, .event-date {
       color: #ffffff;
       text-align: center;
     }
     .event-description {
       color: #ffffff;
       line-height: 1.5;
-      font-size: 18px;
+      font-size: 20px;
     }
   } // .about-event
 
